--- a/exo_s2_clinique/.gitignore
+++ b/exo_s2_clinique/.gitignore
@@ -4,13 +4,14 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+**/.idea
+#../.idea/modules.xml
+#../.idea/jarRepositories.xml
+#../.idea/compiler.xml
+#/**/.idea/libraries/
+#*.iws
+#*.iml
+#*.ipr
 
 ### Eclipse ###
 .apt_generated
